--- a/Task1/GDG_Task1.ipynb
+++ b/Task1/GDG_Task1.ipynb
@@ -4671,7 +4671,8 @@
       },
       "outputs": [],
       "source": [
-        "# One-hot encoding and label encoding are both ways to convert categorical labels into numbers, but they behave very differently and are used in different situations.\n",
+        "# One-hot encoding and label encoding are both ways to convert categorical labels into numbers, \n",
+        "# but they behave very differently and are used in different situations.\n",
         "\n",
         "# Label encoding\n",
         "# Label encoding maps each category to an integer; a single column remains as a single column.\n",
@@ -4688,7 +4689,8 @@
         "\n",
         "# Because only one numeric feature is created, it is memory‑efficient.\n",
         "\n",
-        "# It implicitly introduces an order: 0 < 1 < 2, which is only meaningful for ordinal categories like “Low, Medium, High”.\n",
+        "# It implicitly introduces an order: 0 < 1 < 2, which is only meaningful for ordinal categories \n",
+        "# like “Low, Medium, High”.\n",
         "\n",
         "# This can mislead models that rely on distances or linear relationships by introducing a spurious ordering\n",
         "# over nominal categories, which naturally come with no relative ordering, like colors or cities.\n",
@@ -4696,7 +4698,8 @@
         "\n",
         "# One-hot encoding\n",
         "\n",
-        "# One-hot encoding creates one binary column per category and puts 1 in the column of the present category and 0 in all others.​\n",
+        "# One-hot encoding creates one binary column per category and puts 1 in the column of the present \n",
+        "# category and 0 in all others.​\n",
         "\n",
         "# Example (colors):\n",
         "\n",
@@ -4710,9 +4713,11 @@
         "\n",
         "# There is no artificial order introduced; each category is independent, hence ideal for nominal data.\n",
         "\n",
-        "# Works well with models that assume numeric relationships in features: linear/logistic regression, neural networks, distance‑based methods.\n",
+        "# Works well with models that assume numeric relationships in features: linear/logistic regression, \n",
+        "# neural networks, distance‑based methods.\n",
         "\n",
-        "# Increases dimensionality: the more unique categories, the more sparse binary columns you have; this will increase memory and computations.\n",
+        "# Increases dimensionality: the more unique categories, the more sparse binary columns you have; this \n",
+        "# will increase memory and computations.\n",
         "\n",
         "# When to use which\n",
         "\n",
@@ -4723,7 +4728,8 @@
         "# You are using tree‑based models - Decision Trees, Random Forests, Gradient Boosting -, which do not \n",
         "# interpret the integer codes as distances in the same way as linear models.​ Use one-hot encoding \n",
         "# when: The feature is nominal, for instance city, color, product ID, and the order does not exist. \n",
-        "# You use linear models, neural networks, or distance‑based models where the artificial ordering would hurt performance."
+        "# You use linear models, neural networks, or distance‑based models where the artificial ordering would \n",
+        "# hurt performance."
       ]
     }
   ],
