--- a/Task1/GDG_Task1.ipynb
+++ b/Task1/GDG_Task1.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": null,
       "metadata": {
         "id": "ORep3J4JePys"
       },
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": null,
       "metadata": {
         "id": "KWOe8ZeWmCii"
       },
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": null,
       "metadata": {
         "id": "6ZdBOLzXmV_r"
       },
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": null,
       "metadata": {
         "id": "m8Siqb9knB2s"
       },
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -519,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 180,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -557,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -918,7 +918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 182,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -954,7 +954,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1011,7 +1011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1456,7 +1456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": null,
       "metadata": {
         "id": "BnE-2G3BnFGh"
       },
@@ -1470,7 +1470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1497,7 +1497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": null,
       "metadata": {
         "id": "GtjgyOyn9zR2"
       },
@@ -1506,7 +1506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": null,
       "metadata": {
         "id": "5HdG31gJ7-im"
       },
@@ -1524,7 +1524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 187,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1630,7 +1630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 188,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1777,7 +1777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": null,
       "metadata": {
         "id": "Xnvy65RwR4NR"
       },
@@ -1798,7 +1798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 190,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1825,7 +1825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": null,
       "metadata": {
         "id": "dOCkUNOsQyRj"
       },
@@ -1869,7 +1869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": null,
       "metadata": {
         "id": "pWCec0zNsley"
       },
@@ -1890,7 +1890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 193,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1962,7 +1962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2035,7 +2035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 195,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2102,7 +2102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 196,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2161,7 +2161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2600,7 +2600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2630,7 +2630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2661,7 +2661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3110,7 +3110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3170,7 +3170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3208,7 +3208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 203,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3278,7 +3278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3695,7 +3695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": null,
       "metadata": {
         "id": "RVHpmBEqVuoi"
       },
@@ -3711,7 +3711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4175,7 +4175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": null,
       "metadata": {
         "id": "bKS68cnxbTK6"
       },
@@ -4196,7 +4196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4742,7 +4742,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
